TestSuite/errors/err0198.pas
uses System;

[System.Runtime.InteropServices.DllImport('MyLib.dll')]
procedure Test;
begin
  
end;

begin
  
end.